test/Fail/TelescopePatternEta.err
TelescopePatternEta.agda:11.18-24: warning: -W[no]ShouldBeEtaRecordPatternW
Pattern matching in binders is only allowed for record types with
eta-equality, but this constructor belongs to a record type without
eta-equality (this will be an error in future versions of Agda)
when checking the parameters of module _

TelescopePatternEta.agda:14.7-11: error: [UnequalTerms]
The terms
  w
and
  wrap a
are not equal at type Wrap A
when checking that the expression refl has type w ≡ wrap a
